<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="me.dev.bkk.hivsurvey.views.personalinformation.PersonalInformationPageOneFragment">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:text="@string/text_title_personal_information"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderTextStyle"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:textSize="@dimen/font_size_18"
        android:text="@string/text_personal_information_question"/>

    <RadioGroup
        android:id="@+id/rg_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:text="@string/text_answer_yes"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:text="@string/text_answer_no"/>
    </RadioGroup>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Pink"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/button_done"/>

</LinearLayout>
