<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="me.dev.bkk.hivsurvey.MainActivity">

    <Button
        android:id="@+id/btn_personal_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Pink"
        android:text="@string/button_personal_information"/>
    <Button
        android:id="@+id/btn_survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Pink"
        android:text="@string/button_survey"/>
    <Button
        android:id="@+id/btn_survey_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Pink"
        android:text="@string/button_survey_behavior"/>

</LinearLayout>
