<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="me.dev.bkk.hivsurvey.views.behaviorquestion.BehaviorQuestionFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_title_question_4"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_question"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textSize="@dimen/font_size_18"
        tools:text="question"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_yourself"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_yourself"/>

            <RadioGroup
                android:id="@+id/rg_answer_yourself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbn_yourself_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbn_yourself_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbn_yourself_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_lover"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_lover"/>

            <RadioGroup
                android:id="@+id/rg_answer_lover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbn_lover_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbn_lover_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbn_lover_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_normal"
            android:text="@string/button_previous"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_normal"
            android:text="@string/button_next"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_done"
        style="@style/Button.Pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_done"/>
</LinearLayout>