<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context="me.dev.bkk.hivsurvey.views.personalinformation.PersonalInformationPageOneFragment">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_personal_information"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="horizontal">

        <android.support.design.widget.CheckableImageButton
            android:id="@+id/img_men"
            android:layout_width="100dp"
            android:layout_marginRight="@dimen/spacing_medium"
            android:src="@drawable/ic_male_gray"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_height="100dp"/>

        <android.support.design.widget.CheckableImageButton
            android:id="@+id/img_women"
            android:layout_width="100dp"
            android:src="@drawable/ic_female_gray"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_height="100dp"/>
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:digits="0123456789"
            android:hint="@string/hint_age"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        style="@style/Button.Pink"
        android:text="@string/button_next"/>

</LinearLayout>
